reading and writing with mongodb, cruding it up

--- a/views/newuser.jade
+++ b/views/newuser.jade
@@ -5,5 +5,5 @@ block content
   h1= title
   form#formAddUser(name="adduser",method="post",action="/adduser")
     input#inputUserName(type="text", placeholder="username", name="username")
-      input#inputUserEmail(type="text", placeholder="useremail", name="useremail")
-        button#btnSubmit(type="submit", value="submit")
+    input#inputUserEmail(type="text", placeholder="email", name="useremail")
+    button#btnSubmit(type="submit") Submit
